# ITcopilot

./: .env.development  .env.example  .env.production  .env.production.example  .env.testing  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_body_rc1.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: __init__.py  exception_handlers.py
apps/api/app/core/: __init__.py  dependencies.py  exceptions.py  logging.py  security.py  settings.py
apps/api/app/db/: __init__.py  base.py  session.py
apps/api/app/models/: __init__.py  tax_assessment.py
apps/api/app/repositories/: __init__.py  tax_assessment_repository.py
apps/api/app/routers/: __init__.py  auth.py  health.py  tax.py
apps/api/app/schemas/: __init__.py  auth.py  common.py  tax.py
apps/api/app/services/: __init__.py  health_service.py  tax_service.py
apps/api/app/utils/: __init__.py  datetime_utils.py  money.py
apps/api/tests/: conftest.py  test_auth.py  test_dependencies.py  test_exception_handlers.py  test_health.py  test_health_service.py  test_main_lifespan.py  test_models.py  test_repository.py  test_schemas.py  test_tax.py  test_tax_service.py
apps/web/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.tsx
apps/web/src/components/: Header.tsx  Layout.tsx
apps/web/src/pages/: Dashboard.tsx
apps/web/src/services/: api.ts
docker/: entrypoint.sh
docker/postgres/: init.sql
docs/: api-reference.md  architecture.md  configuration-guide.md  contributing.md  developer-guide.md  github-setup.md  index.md  roadmap.md  security.md
sample_data/: README.md  tax_computation_samples.csv  zerodha_tradebook_sample.csv
scripts/: dev_server.py  generate_production_secrets.py  init_db.py  run_tests.py
tests/: test_broker_imports.py  test_common.py  test_db_session.py  test_excel_engine.py  test_logging.py  test_parsers.py  test_reporting.py  test_security.py  test_settings.py  test_tax_engine.py  test_utils.py
tests/config/: __init__.py  test_feature_flags.py  test_logging_config.py  test_metadata.py  test_settings.py  test_settings_edge_cases.py  test_tax_config.py  test_validators.py
